php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21506 Latest CVS missing php4apache2.dll?
Submitted: 2003-01-07 22:42 UTC Modified: 2003-01-27 19:25 UTC
From: spoon at nexdot dot net Assigned: iliaa (profile)
Status: Closed Package: Compile Failure
PHP Version: 4CVS-2003-01-07 (dev) OS: Windows XP
Private report: No CVE-ID: None
 [2003-01-07 22:42 UTC] spoon at nexdot dot net
I have been using php4.4.0-dev for a while now (ive used a few snapshots of it, but this one since December 26th) (BTW: I use dev becuase i am not in a production environment, and i like to test things and help out in any ways that i can)

I decided to update to a newer snapshot, but php4apache2.dll is missing from all the latest snapshots... php4apache.dll is for 1.x as it gives a load error in 2.x. Is this a planned omision of the dll, or a mistake?

The install.txt also points to a URL for installing apache 2.x w/ php4, and the URL only mentions CGI & php4apache2.dll, yet there is no php4apache2.dll. The news.txt also has no mention of a 'different' dll, or the removal of the dll.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-07 22:45 UTC] spoon at nexdot dot net
Changed category to Documentation Problem, since its not REALLY a problem with apache2
 [2003-01-07 22:45 UTC] spoon at nexdot dot net
Changed category to Documentation Problem, since its not REALLY a problem with apache2
 [2003-01-07 22:46 UTC] spoon at nexdot dot net
Changed category to Documentation Problem, since its not REALLY a problem with apache2
 [2003-01-07 22:48 UTC] spoon at nexdot dot net
sorry about the above! my dog was 'nosing' my mouse! :\
 [2003-01-07 23:19 UTC] philip@php.net
I *HIGHLY* doubt this is a doc problem as most likely that dll just forgot to make its way into the distro.  Nobody is perfect :)
 [2003-01-08 03:34 UTC] edink@php.net
Its actually a compile problem with the latest CVS. You can have a look at http://snaps.php.net/win32/compile.log to see the reason. This will be fixed soon.

Closing the report since we're aware of the issue and are working on it.
 [2003-01-27 16:45 UTC] rabus at users dot sourceforge dot net
Have you any news concerning this problem? The Apache 2 module is still missing in the latest CVS snapshots...
 [2003-01-27 16:51 UTC] spoon at nexdot dot net
They say that they are aware, but nothing has been done since it first happened (the time i mentioned).

I really would like to test 5.0.x, but cant!  :-(
 [2003-01-27 17:43 UTC] philip@php.net
This should remain open until the problem is solved.  Reopening.
 [2003-01-27 19:03 UTC] edink@php.net
This has finally been fixed. The next snapshot should contain php4apache2.dll.
 [2003-01-27 19:20 UTC] edink@php.net
Oops, too trigger happy. The actual fix has not been committed yet, but the cause of the problem has been established.
 [2003-01-27 19:25 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 [2003-02-17 14:38 UTC] rabus at users dot sourceforge dot net
Again, the file is missing in the latest CVS snapshot (5.0.0-CVS-20030217) due to some compile errors.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 07:00:01 2026 UTC