Fixed win32 build (bug #21506). Fixed a bug that would cause garbage data to appear at the end of the loaded apache modules list in phpinfo().